--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "winston": "^3.19.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "prom-client": "^15.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
