--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:migrate": "npx prisma migrate deploy",
+    "db:migrate:payment-proof": "npx ts-node src/scripts/apply-payment-proof-migration.ts",
     "db:fix-enum": "node -e \"console.log('Skipping enum fixes')\"",
     "db:seed": "npx ts-node src/scripts/seed.ts",
     "db:create-representatives": "npm run db:seed:representatives",
     "db:seed:representatives": "npx ts-node src/scripts/seed-representatives.ts",
     "db:setup:super-admin": "npx ts-node src/scripts/setup-super-admin.ts",
     "db:cleanup:tokens": "npx ts-node -e \"require('./src/common/services/logout.service').LogoutService.prototype.cleanupExpiredTokens()\"",
-    "setup:storage": "npx ts-node src/scripts/setup-storage.ts"
+    "setup:storage": "npx ts-node src/scripts/setup-storage.ts",
+    "setup:payment-proof-storage": "npx ts-node src/scripts/setup-payment-proof-storage.ts"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -42,6 +44,7 @@
     "@prisma/client": "^6.17.1",
     "@supabase/supabase-js": "^2.89.0",
     "@types/multer": "^2.0.0",
+    "@types/pg": "^8.16.0",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
@@ -55,11 +58,12 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.18.0",
+    "prom-client": "^15.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "winston": "^3.19.0",
-    "winston-daily-rotate-file": "^5.0.0",
-    "prom-client": "^15.1.0"
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
